--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "core-js": "^3.25.3",
     "lottie-vuejs": "^0.4.0",
+    "markdown-it-vue": "^1.1.7",
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-carousel": "^0.18.0",
